--- a/trailr/app/views/trails/_article.html.erb
+++ b/trailr/app/views/trails/_article.html.erb
@@ -18,21 +18,26 @@
 		
 	</div>
 	<div class="thumbnail_picker">
+		<div class="thumbnail_controls"><span class="prev"><a href="#">Prev</a></span> <span class="next"><a href="#">Next</a></span></div>	
 		<div class="thumbnail">
 			
-			<img src="http://a1.twimg.com/a/1264447102/images/logo.png" width="150">
+			<img src="<%= urls[0] %>" width="150">
 			<ul class="thumbnail_links" style="display:none">
-				<li class="selected">http://a1.twimg.com/a/1264447102/images/logo.png</li>
-				<li>http://www.google.com/intl/en_ALL/images/logo.gif</li>
-				<li>http://l.yimg.com/g/images/logo_home.png.v2</li>
+				<% urls.each_with_index do |url, index| %>
+					<% if index == 0 %>
+						<li class="selected"><%= url %></li>						
+					<% else %>
+						<li><%= url %></li>
+					<% end %>
+				<% end %>
 			</ul>
 		</div>
-		<div class="thumbnail_controls"><span class="prev"><a href="#">Prev</a></span> <span class="next"><a href="#">Next</a></span></div>		
+	
 	</div>
 
 	<div class="notes">
-		<textarea style="width:72%;height:120px;resize:none"><%= notes %></textarea>		
 		<span class="input_label">Comments (Place article excerpts in "quotes")</span>		
+		<textarea style="width:72%;height:100px;resize:none"><%= notes %></textarea>		
 	</div>
 
 	<div class="clear"></div>
