--- a/trailr/public/stylesheets/overview.css
+++ b/trailr/public/stylesheets/overview.css
@@ -307,6 +307,23 @@ article.form input.inline:hover {
 }
 
 
+.article.form .close {
+	float:left;
+	
+	font-size:11px;
+	position:relative;
+	left:-15px;
+	top:-15px;
+	z-index:100;
+	height:26px;
+	width:26px;
+	background-color:none;
+	cursor:pointer;
+	background-image:url("../images/close.png");
+	
+}
+
+
 .article .header {
 	
 	border-bottom:1px solid #CCC;
