--- a/timeline/stylesheets/style.css
+++ b/timeline/stylesheets/style.css
@@ -65,6 +65,21 @@ h2 {
 	border:0px solid green;
 }
 
+.meta_callout {
+	
+	z-index:300;
+	
+	display:none;
+	position:absolute;
+	top:-5px;
+	
+	
+	width:36px;
+	height:20px;
+	background-image:url("../images/callout.png");
+	opacity:0.95;
+}
+
 .meta {
 
 	display:none;
@@ -72,6 +87,7 @@ h2 {
 	z-index:200;
 
 	width:300px;
+	height:35px;
 	position:absolute;
 	left:13px;
 	top:-60px;
