--- a/timeline/stylesheets/style.css
+++ b/timeline/stylesheets/style.css
@@ -24,6 +24,8 @@ h2 {
 	height:150px;
 
 	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+
 	
 }
 
@@ -49,7 +51,10 @@ h2 {
 	right:0px;	
 	position:absolute;
 	top:50px;
+	
 	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	
 	opacity:0.75;
 	
 	
@@ -104,6 +109,7 @@ h2 {
 	opacity:0.95;
 	
 	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
 }
 
 .meta .headline {
@@ -131,6 +137,7 @@ h2 {
 	
 	max-width:75%;
 	max-height:100px;
+	border:none;
 }
 
 .thumbnail {
