--- a/trailr/public/stylesheets/global.css
+++ b/trailr/public/stylesheets/global.css
@@ -1,8 +1,18 @@
+* {
+	padding:0px;
+	margin:0px;
+}
+
 body {
 	font-family: "Helvetica", Arial, sans-serif;
 	padding:0px;
 	margin:0px;
 	font-size:14px;
+	background-color:#222;
+}
+
+h2 {
+	margin-bottom:10px;
 }
 
 a {
