--- a/trailr/public/stylesheets/new.css
+++ b/trailr/public/stylesheets/new.css
@@ -4,7 +4,10 @@
 	height:350px;
 	float:right;
 	width:200px;
+
+	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
+
 	padding:10px;
 	font-size:13.5px;
 	line-height:20px;
