--- a/timeline/stylesheets/style.css
+++ b/timeline/stylesheets/style.css
@@ -29,15 +29,15 @@ h2 {
 	
 }
 
-.insert {
+#timeline .insert {
 	display:none;
 }
 
-.info {
+#timeline .info {
 	display:none;
 }
 
-.empty {
+#timeline .empty {
 	
 	display:none;
 	
@@ -60,7 +60,7 @@ h2 {
 	
 }
 
-.event {
+#timeline .event {
 	text-align:center;
 	position:absolute;
 	
@@ -70,7 +70,7 @@ h2 {
 	border:0px solid green;
 }
 
-.meta_callout {
+#timeline .meta_callout {
 	
 	z-index:300;
 	
@@ -85,7 +85,7 @@ h2 {
 	opacity:0.95;
 }
 
-.meta {
+#timeline .meta {
 
 	display:none;
 
@@ -112,23 +112,23 @@ h2 {
 	-moz-border-radius:5px;
 }
 
-.meta .headline {
+#timeline .meta .headline {
 	
 }
 
-.meta .source {
+#timeline .meta .source {
 	text-decoration:underline;
 	margin-top:10px;
 	font-size:10px;
 }
 
-.meta .date {
+#timeline .meta .date {
 	
 }
 
 
 
-.thumbnail img {
+#timeline .thumbnail img {
 	position:absolute;
 	bottom:0px;
 	left:0px;
@@ -140,7 +140,7 @@ h2 {
 	border:none;
 }
 
-.thumbnail {
+#timeline .thumbnail {
 
 	
 	vertical-align: bottom;
@@ -155,7 +155,7 @@ h2 {
 }
 
 
-.tick {
+#timeline .tick {
 	
 	z-index:0;
 	
@@ -169,7 +169,7 @@ h2 {
 	margin-bottom:6px;
 }
 
-.date {
+#timeline .date {
 	
 	position:absolute;
 	width:100%;
@@ -181,7 +181,7 @@ h2 {
 }
 
 
-#scale {
+#timeline #scale {
 	border-bottom:2px solid black;
 	position:absolute;
 	bottom:30px;
@@ -189,28 +189,10 @@ h2 {
 }
 
 
-table, td, th
+#timeline table, td, th
 {
 	width:100%;
     border-color: black;
     border-style: solid;
 }
 
-table
-{
-    border-width: 0 0 1px 1px;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
-td, th
-{
-    margin: 0;
-    padding: 4px;
-    border-width: 1px 1px 0 0;
-    background-color: #FFF;
-}
-
-th {
-	
-}
