--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -60,8 +60,10 @@
 	
 	display:none;
 	position:absolute;
+
+	top:0px;
 	top:-5px;
-	
+
 	
 	width:36px;
 	height:20px;
@@ -76,10 +78,11 @@
 	z-index:200;
 
 	width:300px;
-	height:35px;
+	/*height:35px;*/
 	position:absolute;
 	left:13px;
 	top:-60px;
+	top:0px;
 	
 	background-color:#454545;
 	color:white;
