--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -18,14 +18,13 @@
 
 
 		$(function() {
-			timeline.init(<%= @trail.articles.to_json %>);
+			timeline.init(<%= @articles.to_json %>);
 		});
 
 	
 	</script>
 	
 <% end %>
-
 
 <div id="trail_header">
 	
