A lot of changes to the static pages to get it ready for the jetpack submission

--- a/trailr/public/stylesheets/layout.css
+++ b/trailr/public/stylesheets/layout.css
@@ -27,7 +27,7 @@
 	position:relative;
 	top:23px;
 	
-	background-image:url("../images/logo.png");
+	/*background-image:url("../images/logo.png");*/
 	width:149px;
 	height:53px;
 	background-repeat:no-repeat;
