--- a/trailr/app/views/home/jetpack.html.erb
+++ b/trailr/app/views/home/jetpack.html.erb
@@ -1,1 +1,39 @@
-<h2>JetPack</h2>
+<% content_for :title do %>
+	LineHive - JetPack
+<% end %>
+
+<% content_for :javascripts  do %>
+
+<link rel="jetpack" href="/jetpack/jetpack.js" name="Boom!"/>
+
+<% end %>
+
+<h2>Start your Jetpacks!</h2>
+
+
+
+
+<table width="100%">
+<td>
+
+<p>Want to make lines while you browse the web?  Install the LineHive Jetpack, it works on Firefox 3.0+. The Jetpack, along with LineHive.com, is being submitted to the <a 
+href="http://design-challenge.mozillalabs.com/jetpack-for-learning/">Jetpack for Learning contest</a>.</p>
+
+<h2>Instructions</h2>
+
+
+<p><b>Visit <a href="http://linehive.com">LineHive.com</a></b> and play around - it shouldn't require instructions.</p>
+
+<p><b>Try the jetpack</b> to create timelines as you surf.  A message should have been displayed in your browser about installing the LineHive.com Jetpack.  Accept it.  The UI will appear on your status bar.</p>
+
+<p><b>Copy URLs</b> and watch them get added to the current trail when the Jetpack is on.  Press the LineHive logo to create the timeline and get a unique URL.</p>
+
+<p><b>Coming soon:</b> Jetpack shows all the links in your stack, Jetpack allows you to create the trail without visiting 
+LineHive.com, the timelines at LineHive.com will be embeddable (without Flash), timelines will have fisheye magnification, and 
+timelines will cluster overlapping links.</p>
+</ul>
+
+
+</td>
+</tr>
+</table>
