--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
 			<div id="header_wrapper">
 					
 						<div id="logo">
-							<%= link_to image_tag("logo.png", :border=>0), :controller => 'home', :action => 'index' %>
+							<%# link_to image_tag("logo.png", :border=>0), :controller => 'home', :action => 'index' %>
+							<%= link_to image_tag("logo2.png", :border=>0), :controller => 'home', :action => 'index' %>							
 						</div>
 
 						<div id="top_links">
