--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+	Create Trail
+<% end %>
+
 <% content_for :stylesheets do %>
 	<%= stylesheet_link_tag "new" %>
 	<%= stylesheet_link_tag "form" %>	
