--- a/trailr/public/stylesheets/global.css
+++ b/trailr/public/stylesheets/global.css
@@ -11,6 +11,17 @@ body {
 	background-color:#222;
 }
 
+p {
+	font-size:14px;
+	line-height:20px;
+	margin-bottom:15px;
+}
+
+h1 {
+	margin-bottom:15px;
+	margin-top:15px;
+}
+
 h2 {
 	margin-bottom:10px;
 }
@@ -20,9 +31,12 @@ a {
 	color:rgb(0, 136, 204);;
 }
 
-p {
+ul {
+	padding-left:30px;
 	font-size:14px;
+	line-height:20px;
 }
+
 
 .clear {
 	clear:both;
@@ -106,11 +120,25 @@ p {
 }
 
 
+.equal_columns {
+	
+}
 
+.equal_columns .left {
+	float:left;
+	width:440px;
+}
+
+.equal_columns .right {
+	margin-left:20px;
+	float:right;
+	width:440px;	
+}
 
 .two_columns {
 	
 }
+
 
 .two_columns .left {
 	float:left;
@@ -121,7 +149,6 @@ p {
 	width:48%;
 	margin-left:52%;	
 }
-
 
 
 
