--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -105,7 +105,13 @@
 
 	$(function() {
 		
-		timeline.init();
+		<% if @articles %>
+			timeline.init(<%= @articles.to_json %>);
+		<% else %>
+			timeline.init();		
+		<% end %>
+		
+
 		
 		$('.article .next').livequery('click', next_thumbnail);
 		$('.article .prev').livequery('click', prev_thumbnail);
@@ -168,7 +174,6 @@
 
 <% end %>
 
-
 <h2>Create New Trail <span style="font-size:12px; font-weight:normal">(<%= link_to "Other ways to create trails", :controller => "home", :action => "jetpack" %>)</span></h2>
 
 
@@ -201,7 +206,7 @@
 			<div id="articles"></div>
 			
 			<input type="button" id="add_urls" class="url_add_button" value="Add">
-			<textarea name="urls" id="urls" id="urls" class="large_text" style="width:520px;resize:none;height:75px;"><%= params[:urls] %></textarea>
+			<textarea name="urls" id="urls" id="urls" class="large_text" style="width:520px;resize:none;height:75px;"></textarea>
 			
 			<div class="space_20"></div>
 			
