Updated the site with the new name and the new jetpack

--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 							-->
 
 							<ul>
-								<li><%= link_to "Create Trail", :controller => "trails", :action => "new" %></li>
+								<li><%= link_to "Create Timeline", :controller => "trails", :action => "new" %></li>
 								<!--<li><%# link_to "Explore", :controller => "home", :action => "explore" %></li>-->
 							</ul>
 
@@ -54,7 +54,7 @@
 		<div id="footer">
 			<div id="footer_wrapper">
 				<ul>
-					<li>&copy; 2010 Trailr</li>
+					<li>&copy; 2010 LineHive.com</li>
 
 					<li><%= link_to "Home", :controller => "home", :action => "index" %></li>
 					<li><%= link_to "Team", :controller => "home", :action => "team" %></li>	
