Polished a couple of typos and added sample timelines. THIS IS A GOOD COMMIT FOR THE DB.

--- a/trailr/app/views/home/about.html.erb
+++ b/trailr/app/views/home/about.html.erb
@@ -37,8 +37,20 @@
 </div>
 
 
+<div class="space_20"></div>
 
 
+<h2>Sample Timelines</h2>
 
+<p>
+	<%= link_to "Leadup to Obama's State of the Union", :controller => "trails", :action => "show", :id => "1" %>
+</p>
 
+<p>
+	<%= link_to "Haiti Earthquake", :controller => "trails", :action => "show", :id => "2" %>
+</p>
+
+<p>
+	<%= link_to "Beyonce goes from new kid on the block to Grammy winner", :controller => "trails", :action => "show", :id => "3" %>
+</p>
 
