--- a/trailr/app/views/home/jetpack.html.erb
+++ b/trailr/app/views/home/jetpack.html.erb
@@ -16,7 +16,7 @@
 <table width="100%">
 <td>
 
-<p>Want to make lines while you browse the web?  Install the LineHive Jetpack, it works on Firefox 3.0+. The Jetpack, along with LineHive.com, is being submitted to the <a 
+<p>Want to make Timelines while you browse the web?  Install the LineHive Jetpack, it works on Firefox 3.0+. The Jetpack, along with LineHive.com, is being submitted to the <a 
 href="http://design-challenge.mozillalabs.com/jetpack-for-learning/">Jetpack for Learning contest</a>.</p>
 
 <h2>Instructions</h2>
@@ -26,7 +26,7 @@ href="http://design-challenge.mozillalabs.com/jetpack-for-learning/">Jetpack for
 
 <p><b>Try the jetpack</b> to create timelines as you surf.  A message should have been displayed in your browser about installing the LineHive.com Jetpack.  Accept it.  The UI will appear on your status bar.</p>
 
-<p><b>Copy URLs</b> and watch them get added to the current trail when the Jetpack is on.  Press the LineHive logo to create the timeline and get a unique URL.</p>
+<p><b>Copy URLs</b> and watch them get added to the current trail when the Jetpack is on.  Press the "Send to linehive" button to create the timeline.</p>
 
 <p><b>Coming soon:</b> Jetpack shows all the links in your stack, Jetpack allows you to create the trail without visiting 
 LineHive.com, the timelines at LineHive.com will be embeddable (without Flash), timelines will have fisheye magnification, and 
