Changed the name of the jetpack

--- a/trailr/app/views/home/jetpack.html.erb
+++ b/trailr/app/views/home/jetpack.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :javascripts  do %>
 
-<link rel="jetpack" href="/jetpack/jetpack.js" name="Boom!"/>
+<link rel="jetpack" href="/jetpack/jetpack.js" name="LineHive"/>
 
 <% end %>
 
