Added a feedback link to the main template.

--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -46,9 +46,10 @@
 		
 		
 		<div style="background-color:white">
-		<div id="content">
-			<%= yield %>
-		</div>	
+			<a href="http://bugs.linehive.com/" id="feedback">&nbsp;</a>
+			<div id="content">
+				<%= yield %>
+			</div>	
 		</div>
 						
 		<div id="footer">
