--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 					
 						<div id="logo">
 							<%# link_to image_tag("logo.png", :border=>0), :controller => 'home', :action => 'index' %>
-							<%= link_to image_tag("logo2.png", :border=>0), :controller => 'home', :action => 'index' %>							
+							<%# link_to image_tag("logo2.png", :border=>0), :controller => 'home', :action => 'index' %>							
+							<%= link_to image_tag("logo3.png", :border=>0), :controller => 'home', :action => 'index' %>							
 						</div>
 
 						<div id="top_links">
