--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -7,6 +7,8 @@
 	<%= stylesheet_link_tag "form" %>	
 	<%= stylesheet_link_tag "overview" %>	
 	<%= stylesheet_link_tag "timeline" %>	
+	<%= stylesheet_link_tag "smoothness/jquery.ui.datepicker.css" %>	
+
 
 <% end %>
 
@@ -14,6 +16,9 @@
 <% content_for :javascripts do %>
 
 <%= javascript_include_tag "timeline.js" %>
+<%= javascript_include_tag "jquery.ui.datepicker.js" %>
+
+
 
 <script type="text/javascript" charset="utf-8">
 
@@ -174,8 +179,11 @@
 
 <% end %>
 
+
+
 <h2>Create New Timeline <span style="font-size:12px; font-weight:normal">(<%= link_to "Other ways to create timelines", :controller => "home", :action => "jetpack" %>)</span></h2>
 
+<div class="space_10"></div>
 
 <fieldset>
 
@@ -213,7 +221,7 @@
 		</div>
 		<div class="sidecol">
 			<div class="round_box" style="margin-top:15px">
-				Type or paste in as many URLs as you want and hit <b>Enter</b> to add them to your trail.				
+				Type or paste in as many URLs as you want and hit <b>Enter</b> to add them to your trail.
 			</div>
 		</div>
 		<div class="clear"></div>
