--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -75,7 +75,7 @@
 
 	display:none;
 
-	z-index:200;
+	z-index:1;
 
 	width:300px;
 	/*height:35px;*/
@@ -138,7 +138,7 @@
 	
 	height:110px;
 	margin:auto;
-	z-index:100;
+	z-index:0;
 }
 
 
@@ -168,6 +168,61 @@
 }
 
 
+
+
+
+
+#timeline .date .date_edit {
+	border:none;
+	border-bottom:1px solid #CCC;
+	background-color:transparent;
+	font-size:12px;
+
+	text-align:center;
+	width:110px;
+	
+	padding:2px 0px 2px 0px;
+	font-family:Helvetica, Arial, Sans-Serif;
+}
+
+
+#timeline .date .date_edit:focus {
+	border:1px solid #CCC;
+	background-color:white;
+	font-size:12px;
+	padding:2px 0px 2px 0px;
+	font-family:Helvetica, Arial, Sans-Serif;
+}
+
+#timeline .date .date_edit:hover {
+	border:1px solid #CCC;
+	background-color:white;
+	font-size:12px;
+	padding:2px 0px 2px 0px;
+	font-family:Helvetica, Arial, Sans-Serif;
+}
+
+
+#timeline .date .date_edit:hover {
+	border:1px solid #CCC;
+	background-color:white;
+	font-size:12px;
+	padding:2px 0px;
+	font-family:Helvetica, Arial, Sans-Serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 #timeline #scale {
 	border-bottom:2px solid black;
 	position:absolute;
@@ -175,20 +230,21 @@
 	width:100%;
 }
 
-
+/*
 #timeline table, td, th
 {
 	width:100%;
     border-color: black;
     border-style: solid;
 }
+*/
 
 #timeline .close {
 	
 	font-size:11px;
 	position:absolute;
 	left:0px;
-	top:0px;
+	bottom:-8px;
 	z-index:100;
 	height:26px;
 	width:26px;
