Properly implemented date editing with reordering and with saving the date properly to the DOM

--- a/trailr/app/views/home/team.html.erb
+++ b/trailr/app/views/home/team.html.erb
@@ -11,7 +11,7 @@
 <li><a href="http://salmanahmad.com/">Salman Ahmad</a> 
 <li><a href="http://frankc.net/">Frank Chen</a> 
 <li><a href="http://www.res.kutc.kansai-u.ac.jp/~ckita/bio.html">Chigusa Kita</a>
-<li><a href="http://www.shervin.com//">Shervin Pishevar</a> (advisor)
+<li><a href="http://www.shervin.com/">Shervin Pishevar</a> (advisor)
 <li><a href="http://www.kamvar.org/">Sep Kamvar</a> (advisor)
 <li><a href="http://www.stanford.edu/~roypea/">Roy Pea</a> (advisor)
 <li><a href="http://hci.stanford.edu/jheer/">Jeff Heer</a> (advisor)
