--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -179,6 +179,16 @@
 
 <% end %>
 
+<script type="text/javascript" charset="utf-8">
+		$(function() {
+			$("#click").click(function() {
+				$("#image_picker_cover").show();
+				$("#image_picker").show();				
+			});	
+		});
+</script>
+
+<input type="button" name="some_name" value="Click Me" id="click">
 
 
 <h2>Create New Timeline <span style="font-size:12px; font-weight:normal">(<%= link_to "Other ways to create timelines", :controller => "home", :action => "jetpack" %>)</span></h2>
@@ -233,7 +243,57 @@
 
 <div id="timeline">
 	
-	
+	<div id="image_picker_cover">
+		&nbsp;
+	</div>	
+	<div id="image_picker">
+		<div class="close"></div>
+		<h3>
+			Site Images
+			<span style="font-weight:normal"> - From www.cnn.com</span>
+			
+		</h3>
+		<ul>
+			<li><img src="http://t0.gstatic.com/images?q=tbn:FZrczczdDVcJ3M:http://www.wallpaperbase.com/wallpapers/space/spaceshuttle/space_shuttle_13.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:YXM72oNbzt4WLM:http://govdocs.evergreen.edu/hotopics/wrightbros100/space-shuttle.jpg"></li>
+			<li><img src="http://t1.gstatic.com/images?q=tbn:tk6ZQQ622vX6TM:http://www.sanchezcircuit.com/blog/wp-content/uploads/2008/12/space_shuttle_launch.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:GIYfHO8PG3Ty4M:http://jayrollinstv.files.wordpress.com/2009/05/space-shuttle-atlantis-sts-27-in-1972-xl.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:YXM72oNbzt4WLM:http://govdocs.evergreen.edu/hotopics/wrightbros100/space-shuttle.jpg"></li>
+			<li><img src="http://t1.gstatic.com/images?q=tbn:tk6ZQQ622vX6TM:http://www.sanchezcircuit.com/blog/wp-content/uploads/2008/12/space_shuttle_launch.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:GIYfHO8PG3Ty4M:http://jayrollinstv.files.wordpress.com/2009/05/space-shuttle-atlantis-sts-27-in-1972-xl.jpg"></li>
+			<li><img src="http://t1.gstatic.com/images?q=tbn:tk6ZQQ622vX6TM:http://www.sanchezcircuit.com/blog/wp-content/uploads/2008/12/space_shuttle_launch.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:GIYfHO8PG3Ty4M:http://jayrollinstv.files.wordpress.com/2009/05/space-shuttle-atlantis-sts-27-in-1972-xl.jpg"></li>
+			<li><img src="http://t1.gstatic.com/images?q=tbn:tk6ZQQ622vX6TM:http://www.sanchezcircuit.com/blog/wp-content/uploads/2008/12/space_shuttle_launch.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:GIYfHO8PG3Ty4M:http://jayrollinstv.files.wordpress.com/2009/05/space-shuttle-atlantis-sts-27-in-1972-xl.jpg"></li>
+			<li><img src="http://t1.gstatic.com/images?q=tbn:tk6ZQQ622vX6TM:http://www.sanchezcircuit.com/blog/wp-content/uploads/2008/12/space_shuttle_launch.jpg"></li>
+			<li><img src="http://t3.gstatic.com/images?q=tbn:GIYfHO8PG3Ty4M:http://jayrollinstv.files.wordpress.com/2009/05/space-shuttle-atlantis-sts-27-in-1972-xl.jpg"></li>
+		</ul>
+
+
+		<div class="clear">&nbsp;</div>
+
+
+
+		
+		
+		<div style="border-bottom:1px solid black;text-align:center; margin-bottom:14px">
+			<span style="position:relative;top:7px;background-color:#F5F5F5;padding:0px 5px">Or</span>
+		</div>
+		
+		<h3>
+			Custom Image
+			<span style="font-weight:normal"> - Use any image URL</span>
+		</h3>
+		
+		<div style="padding:0px 15px">
+			<input type="button" name="some_name" value="Choose" style="float:right" class="trail_button">		
+
+			<input type="text" name="some_name" value="" style="width:420px" class="large_text">
+		</div>
+
+		
+	</div>
+
 	<div class="meta">
 		<div class="headline">
 			&nbsp;
