--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -113,8 +113,6 @@
 	
 }
 
-
-
 #timeline .thumbnail img {
 	position:absolute;
 	bottom:0px;
@@ -259,3 +257,87 @@
 #timeline.noedit .close {
 	display:none;
 }
+
+
+#timeline #image_picker_cover {
+	height:100%;
+	width:100%;
+	position:fixed;
+	top:0px;
+	left:0px;
+	z-index:100;
+	background-color:black;
+	opacity:0.5;
+	display:none;	
+}
+
+
+#timeline #image_picker { 
+	
+	display:none;
+	
+	width:580px;
+	height:380px;
+	
+	padding:10px;
+	
+	margin:auto;
+	left:0px;
+	right:0px;
+	position:fixed;
+	bottom:100px;
+	
+	background-color:#F5F5F5;
+	z-index:100;
+	
+	
+	-webkit-border-radius:5px;
+	-gecko-border-radius:5px;
+	
+}
+
+
+#timeline #image_picker .close {
+	float:right;
+	position:absolute;
+	
+	left:auto;
+	right:-10px;
+	top:-10px;
+	
+	height:26px;
+	width:26px;
+	background-color:none;
+	cursor:pointer;
+	background-image:url("../images/close.png");
+	
+}
+
+#image_picker img {	
+	width:75px;
+	max-height:100px;
+	border:none;
+
+}
+
+#image_picker ul {
+	list-style: none;
+	height:200px;
+	overflow:auto;
+	padding-left:0px;
+}
+
+#image_picker ul li {
+	float:left;
+	padding:15px 15px;
+}
+
+#image_picker ul li:hover {
+	background-color:#C7C7C7;
+}
+
+#image_picker h3 {
+	margin-bottom:15px;
+}
+
+
