--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -179,17 +179,6 @@
 
 <% end %>
 
-<script type="text/javascript" charset="utf-8">
-		$(function() {
-			$("#click").click(function() {
-				$("#image_picker_cover").show();
-				$("#image_picker").show();				
-			});	
-		});
-</script>
-
-<input type="button" name="some_name" value="Click Me" id="click">
-
 
 <h2>Create New Timeline <span style="font-size:12px; font-weight:normal">(<%= link_to "Other ways to create timelines", :controller => "home", :action => "jetpack" %>)</span></h2>
 
@@ -250,7 +239,7 @@
 		<div class="close"></div>
 		<h3>
 			Site Images
-			<span style="font-weight:normal"> - From www.cnn.com</span>
+			<span style="font-weight:normal"> - From <span class="source">www.cnn.com</span></span>
 			
 		</h3>
 		<ul>
@@ -286,9 +275,9 @@
 		</h3>
 		
 		<div style="padding:0px 15px">
-			<input type="button" name="some_name" value="Choose" style="float:right" class="trail_button">		
+			<input type="button" name="some_name" value="Choose" style="float:right" class="trail_button pick_custom_image_button">		
 
-			<input type="text" name="some_name" value="" style="width:420px" class="large_text">
+			<input type="text" name="some_name" value="" style="width:420px" class="large_text pick_custom_image_text">
 		</div>
 
 		
