--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -12,6 +12,10 @@
 
 <% content_for :javascripts do %>
 	<%= javascript_include_tag "timeline.js" %>
+	<%= javascript_include_tag "jquery.ui.datepicker.js" %>
+	
+	
+	
 	<script type="text/javascript" charset="utf-8">
 
 		$(function() {
