--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -113,6 +113,41 @@
 	
 }
 
+#timeline .thumbnail .pick_image {
+	
+	display:none;
+	
+	cursor:pointer;
+	
+	position:absolute;
+	top:20px;
+	left:0px;
+	right:0px;	
+	margin:auto;
+	
+	padding:5px;
+	
+	font-size:11px;
+	
+	text-decoration:underline;
+	
+	background-color:#454545;
+	color:white;
+	width:75%;
+	
+	-webkit-border-radius:5px;
+	-gecko-border-radius:5px;
+	
+	opacity:0.95;
+}
+
+
+#timeline .thumbnail:hover .pick_image {
+	display:block;
+}
+
+
+
 #timeline .thumbnail img {
 	position:absolute;
 	bottom:0px;
@@ -245,7 +280,7 @@
 	position:absolute;
 	left:0px;
 	bottom:-8px;
-	z-index:100;
+	z-index:50;
 	height:26px;
 	width:26px;
 	background-color:none;
@@ -330,6 +365,7 @@
 #image_picker ul li {
 	float:left;
 	padding:15px 15px;
+	cursor:pointer;
 }
 
 #image_picker ul li:hover {
