--- a/trailr/public/stylesheets/embed.css
+++ b/trailr/public/stylesheets/embed.css
@@ -8,10 +8,9 @@ body {
 }
 
 h3#caption {
-	margin:0px;
+	margin:25px 0px 10px;
 	padding:0px;
-	line-height:60px;
-	height:60px;
+	height:30px;
 	width:100%;
 }
 
