--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -1,1 +1,116 @@
-<h2>Welcome to linehive</h2>
+<% content_for :title do %>
+	linehive
+<% end %>
+
+<% content_for :stylesheets do %>
+	<%= stylesheet_link_tag "new" %>
+	<%= stylesheet_link_tag "form" %>	
+	<%= stylesheet_link_tag "overview" %>	
+	<%= stylesheet_link_tag "timeline" %>	
+	<%= stylesheet_link_tag "smoothness/jquery.ui.datepicker.css" %>	
+<% end %>
+
+
+<% content_for :javascripts do %>
+
+<%= javascript_include_tag "timeline.js" %>
+<%= javascript_include_tag "jquery.ui.datepicker.js" %>
+
+<% end %>
+
+
+
+<h2>Popular Timelines <span style="font-size:12px; font-weight:normal">(<%= link_to "Create a timeline", :controller => "home", :action => "create" %>)</span></h2>
+<div class="space_10"></div>
+<fieldset>
+	<div class="small_columns">
+		<div class="maincol">
+			<div style="float:left;width:600px;height:230px;border:0px solid #808080"> 
+				<iframe frameborder="0" width="450" height="230" src="/embed/3"></iframe> 
+			</div> 
+			<div style="float:left; width:600px; height:230px;border:0px solid #808080"> 
+				<iframe frameborder="0" width="450" height="230" src="/embed/1"></iframe> 
+			</div> 			
+		</div>
+		<div class="sidecol">
+			<div class="round_box" style="margin-top:15px">
+				<h3>What is linehive?</h3>
+				<b>Create</b> a timeline by pasting links.<br>
+				<b>Share</b> the URL with others; <b>embed</b> it anywhere.<br>
+				<b>Crowdsource</b> news exploration.<br><br>
+				
+				<h3>What's new?</h3>
+				<b>Date time editing</b> for timeline creation.<br>
+				<b>Jetpack</b> authoring extension for firefox.<br>
+				Follow us on <b>Twitter</b>.<br><br>
+				
+				<h3>To come?</h3>
+				<b>Search</b> by topics.<br>
+				<b>Comment</b> on any timeline.<br>
+				<b>API</b> for development clients.<br>
+			</div>
+		</div>
+		<div class="clear"></div>
+	</div>
+	
+</fieldset>
+<!--
+<h2>Most Popular Topics <span style="font-size:12px; font-weight:normal">(<%= link_to "Create a timeline", :controller => "home", :action => "create" %>)</span></h2>
+<div class="space_10"></div>
+<fieldset>
+	<div class="small_columns">
+		<div class="maincol">
+			<div class="item">
+			Entertainment<br>
+			<img src="http://frankc.net/single.gif">
+			<div class="itemdetailscon">
+				<div class="itemdetails">
+				<span class="title">Haiti Earthquake Relief<br>
+				by <span class="author">SalmanA...</span><br>
+				Views: <span class="views">13,332</span><br>
+				Replies: <span class="replies">809</span><br>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+			News<br>
+			<img src="http://frankc.net/single.gif">
+			<div class="itemdetailscon">
+				<div class="itemdetails">
+				<span class="title">Haiti Earthquake Relief<br>
+				by <span class="author">SalmanA...</span><br>
+				Views: <span class="views">13,332</span><br>
+				Replies: <span class="replies">809</span><br>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+			linehive<br>
+			<img src="http://frankc.net/single.gif">
+			<div class="itemdetailscon">
+				<div class="itemdetails">
+				<span class="title">Haiti Earthquake Relief<br>
+				by <span class="author">SalmanA...</span><br>
+				Views: <span class="views">13,332</span><br>
+				Replies: <span class="replies">809</span><br>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+			<b>Music</b><br>
+			<img src="http://frankc.net/single.gif">
+			<div class="itemdetailscon">
+				<div class="itemdetails">
+				<span class="title">Haiti Earthquake Relief<br>
+				by <span class="author">SalmanA...</span><br>
+				Views: <span class="views">13,332</span><br>
+				Replies: <span class="replies">809</span><br>
+				</div>
+			</div>
+			</div>
+			
+		</div>
+		<div class="clear"></div>
+	</div>
+</fieldset>
+-->	
