--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 							<%# link_to image_tag("logo.png", :border=>0), :controller => 'home', :action => 'index' %>
 							<%# link_to image_tag("logo2.png", :border=>0), :controller => 'home', :action => 'index' %>							
 							<%= link_to image_tag("logo3.png", :border=>0), :controller => 'home', :action => 'index' %>							
+							share your story
 						</div>
 
 						<div id="top_links">
@@ -36,7 +37,16 @@
 								<li><%= link_to "Create Timeline", :controller => "trails", :action => "new" %></li>
 								<!--<li><%# link_to "Explore", :controller => "home", :action => "explore" %></li>-->
 							</ul>
-
+							<div class="clear"></div>
+							<!--
+							<br><br>
+							<a>Create Account</a>
+							&nbsp; &nbsp;or&nbsp; &nbsp;
+							<a>Login</a>
+							&nbsp; &nbsp;
+							<a>Recent Timelines</a>
+							&nbsp; &nbsp;
+							<a>Help</a>-->
 
 
 						</div>
