Fixed a small bug on the homescreen with a wrong link and also fixed a bug with the change image button appearing

--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -20,16 +20,16 @@
 
 
 
-<h2>Popular Timelines <span style="font-size:12px; font-weight:normal">(<%= link_to "Create a timeline", :controller => "home", :action => "create" %>)</span></h2>
+<h2>Popular Timelines <span style="font-size:12px; font-weight:normal">
 <div class="space_10"></div>
 <fieldset>
 	<div class="small_columns">
 		<div class="maincol">
 			<div style="float:left;width:600px;height:230px;border:0px solid #808080"> 
-				<iframe frameborder="0" width="450" height="230" src="/embed/3"></iframe> 
+				<iframe frameborder="0" width="600" height="230" src="/embed/3"></iframe> 
 			</div> 
 			<div style="float:left; width:600px; height:230px;border:0px solid #808080"> 
-				<iframe frameborder="0" width="450" height="230" src="/embed/1"></iframe> 
+				<iframe frameborder="0" width="600" height="230" src="/embed/1"></iframe> 
 			</div> 			
 		</div>
 		<div class="sidecol">
