Started work on the new timeline with zooming and also added the test code for frank

--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -28,7 +28,9 @@
 		</a>
 	</div>
 	-->
-	
+	<div id="actions">
+		
+	</div>
 	<h3 id="caption"><%= @trail.caption %></h3>
 	<div style="">
 		<div id="timeline" class="noedit">
@@ -42,11 +44,12 @@
 				</div>
 			</div>
 			<div class="meta_callout">&nbsp;</div>
-
-
-			<div class="empty">
-				No Events
-			</div>			
+	
+			<div class="events">
+				<div class="empty">
+					No Events
+				</div>			
+			</div>
 
 			<div id="scale">&nbsp;</div>
 		</div>
