--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -52,12 +52,14 @@
 		</div>
 		<div class="meta_callout">&nbsp;</div>
 	
-	
-		<div class="empty">
-			No Events
-		</div>			
+		<div class="events">
+			<div class="empty">
+				No Events
+			</div>			
+		</div>
 
 		<div id="scale">&nbsp;</div>
+
 	</div>
 </div>
 
